# bencode

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  codeql.yml
benchmarks/: bench.c
cmake/: CompilerWarnings.cmake  Sanitizers.cmake  bencode.pc.in  bencodeConfig.cmake.in
docs/: Doxyfile
examples/: decode_example.c
include/bencode/: bencode.h  export.h  version.h.in
scripts/: coverage.sh
src/: bencode_internal.h  emit.c  main.c  parse_dom.c  parse_sax.c  status.c  value.c  version.c
tests/: CMakeLists.txt  check_doxygen_coverage.sh  check_doxygen_coverage_negative.sh  check_exports.sh  check_exports_negative.sh  test_bencode.c
tests/consumer/: CMakeLists.txt  consumer.c
tests/fuzz/: CMakeLists.txt  bencode.dict  fuzz_parse_dom.c  fuzz_parse_sax.c
tests/fuzz/corpus/: 09_simple_dict  11_nested  README.md
